2009-04-28  Torbjorn Granlund  <tege@gmplib.org>

	* mpn/generic/neg_n.c: New file.
	* configure.in (gmp_mpn_functions): Add neg_n.
	* mpn/asm-defs.m4 (define_mpn): Add neg_n.
	* mpn/Makefile.am (nodist_EXTRA_libmpn_la_SOURCES): Add neg_n.c.
	* gmp-h.in: Handle mpn_neg_n properly.
	
	* mpn/generic/toom_interpolate_7pts.c (divexact_2exp): Nailify.

	* mpn/generic/gcdext.c: Change some MPN_NORMALIZE to
	MPN_NORMALIZE_NOT_ZERO.
	* mpn/generic/gcdext_lehmer.c: Likewise.
	Add a MPN_NORMALIZE_NOT_ZERO.

	* mpn/generic/binvert.c: Remove own mpn_neg_n.

	* tests/mpz/t-gcd.c: Add some MPZ_CHECK_FORMAT calls.

2009-04-27  Torbjorn Granlund  <tege@gmplib.org>

	* mpn/Makefile.am (TARG_DIST): Add minithres.

	* mpn/generic/bdiv_dbm1c.c: Handle nails.

2009-04-26  Torbjorn Granlund  <tege@gmplib.org>

	* config.guess: Recognize more POWER processor types.

2009-04-25  Torbjorn Granlund  <tege@gmplib.org>

	* mpn/x86/pentium4/sse2/popcount.asm: Work around Apple reloc bug.
	* mpn/x86/darwin.m4: Define symbol "DARWIN".

2009-04-19  Torbjorn Granlund  <tege@gmplib.org>

	* mpn/generic/powm.c (mpn_redc_n): Use ASSERT_ALWAYS, not abort().
	* mpn/generic/powm_sec.c: Likewise.

	* mpn/powerpc64/aix.m4 (EXTERN_FUNC): New define.  Add dummy variants
	for other m4 files.
	* mpn/powerpc64/mode64/divrem_1.asm: Use EXTERN_FUNC.
	* mpn/powerpc64/mode64/divrem_1.asm: Likewise.

2009-04-16  Torbjorn Granlund  <tege@gmplib.org>

	* mpn/x86_64/x86_64-defs.m4 (JUMPTABSECT): New define.
	* mpn/x86_64/darwin.m4: Likewise.
	* mpn/x86_64/sqr_basecase.asm: Rework switch code using JUMPTABSECT.

	* tune/common.c (speed_mpn_hgcd, speed_mpn_hgcd_lehmer):
	Remove an unused variable.

	* mpn/x86/x86-defs.m4 (LEA): Get SIZE arguments right.

2009-04-14  Torbjorn Granlund  <tege@gmplib.org>

	* Version 4.3.0 released.

	* scanf/doscan.c (__gmp_doscan): Pad 3-operand scanf call with dummy
	argument.
	* scanf/sscanffuns.c (scan): Disable vsscanf variant for now.
